# dslcat

./: .gitignore  README.md  dslcat.cabal  stack.yaml
src/Language/: DSLCat.hs
tests/: doctests.hs
