name:                dslcat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chenmoucheng/dslcat#readme
license:             BSD3
license-file:        LICENSE
author:              Chen-Mou Cheng
maintainer:          chenmou.cheng@gmail.com
copyright:           2021 Chen-Mou Cheng
category:            Language
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:       base
                     , Cabal
                     , cabal-doctest

library
  build-depends:       base
                     , categories
                     , constraints
                     , syntactic
  default-extensions:  AllowAmbiguousTypes
                     , FlexibleContexts
                     , GADTs
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
  default-language:    Haskell2010
  exposed-modules:     Language.DSLCat
  hs-source-dirs:      src

test-suite doctests
  build-depends:       base
                     , doctest
                     , dslcat
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             doctests.hs
  type:                exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/chenmoucheng/dslcat
